tests/fixtures/invalid/min_bool_bytes.py
# Cannot call min() with Bool, Bytes
x = min(True, b"hello")
